added more flavors and titles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Receita Da Mamae</title>
+    <title>Receita Da Mamãe</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Receita da Mamae</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Receita Da Mamãe</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <!-- <div class="intro-lead-in">Ta dando trabalho</div> -->
-                <div class="intro-heading">CARINHO EM CAIXAS</div>
+                <div class="intro-heading">Artesanal e mais gostoso</div>
                 <a href="#services" class="page-scroll btn btn-xl">Me mostre mais!</a>
             </div>
         </div>
@@ -90,8 +90,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Serviços</h2>
+                    <h3 class="section-subheading text-muted">Nosso tipos de serviços</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -100,8 +100,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Entregas</h4>
+                    <p class="text-muted">Entregamos a sua residencia ou destino de preferencia</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
