edited all team photos and edited contact index

--- a/index.html
+++ b/index.html
@@ -399,7 +399,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contato</h2>
+                  <!-- <h2> envie </h2> --><h4 class="section-heading">Contato Para Vendas</h4>
+                  <h6 class="section-heading">55 62 9389 9801</h6>
+                  <br>
+                </br>
+                <br>
+                </br>
+                    <h4 class="section-heading">Envie Seu Contato</h4>
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
