--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <!-- <div class="intro-lead-in">Ta dando trabalho</div> -->
-                <div class="intro-heading">Artesanal é mais gostoso</div>
+                <div class="intro-heading">Artesanal e Unico</div>
                 <a href="#portfolio" class="page-scroll btn btn-xl">Me mostre mais!</a>
             </div>
         </div>
