--- a/index.html
+++ b/index.html
@@ -311,22 +311,22 @@
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/dioguim.jpg" class="img-responsive img-circle" alt="">
                         <h4>Diogo Mota</h4>
                         <p class="text-muted">Co-Fundador</p>
                         <ul class="list-inline social-buttons">
-                            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <!- <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li> -->
-                        </ul>
-                    </div>
-                </div>
+                        <!-- </ul> -->
+                    <!-- </div> -->
+                <!-- </div> -->
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/tia.jpg" class="img-responsive img-circle" alt="">
@@ -342,22 +342,22 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <!-- <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/luanda.jpg" class="img-responsive img-circle" alt="">
                         <h4>Luanda Mota Lopes</h4>
                         <p class="text-muted"> Marketing</p>
                         <ul class="list-inline social-buttons">
-                            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <!-<li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li> -->
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                        <!-- </ul> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <!-- <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p> -->
@@ -400,7 +400,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                   <!-- <h2> envie </h2> --><h4 class="section-heading">Contato Para Vendas</h4>
-                  <h6 class="section-heading">55 62 9389 9801</h6>
+                  <h6 class="section-heading">55 62 9 9389 9801</h6>
                   <br>
                 </br>
                 <br>
